--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,29 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@layer base {
+  h1 {
+    @apply no-underline;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  a {
+    @apply decoration-slate-400;
+    @apply underline;
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  a:hover {
+    @apply decoration-slate-200;
+  }
+
+  p {
+    @apply mx-5;
+  }
+
+  ul {
+    @apply mx-5;
+  }
+
+  li {
+    @apply m-0;
   }
 }
